# what-the-food

./: README.md
backend/Image_Gen/: main.py
backend/image_ocr/: pyproject.toml
backend/image_ocr/app/: main.py
backend/nlu_enhancement/app/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css  index.js
frontend/src/component/: MenuDisplay.js
